--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,30 @@
 <resources>
     <string name="app_name">Dictionary App</string>
+    <string name="saved_words">Saved Words</string>
+    <string name="no_saved_words">Your saved words will appear here</string>
+    <string name="no_matching_words">No matching words found</string>
+    <string name="clear_all_title">Clear All Words</string>
+    <string name="clear_all_confirmation">Are you sure you want to delete all saved words?</string>
+    <string name="clear">Clear</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete">Delete</string>
+    <string name="export">Export</string>
+    <string name="search">Search</string>
+    <string name="export_options">Export Options</string>
+    <string name="export_format_prompt">Choose export format:</string>
+    <string name="export_as_txt">Text File (.txt)</string>
+    <string name="export_as_pdf">PDF Document (.pdf)</string>
+    <string name="clear_all">Clear All</string>
+    <!-- Add these new strings -->
+    <string name="add_word">Add Word</string>
+    <string name="add_new_word">Add New Word</string>
+    <string name="save">Save</string>
+    <string name="add_first_word">Add Your First Word</string>
+    <string name="word">Word</string>
+<!--    Settings strings-->
+    <string name="settings">Settings</string>
+    <string name="back">Back</string>
+    <string name="app_theme">App Theme</string>
+    <string name="notifications">Notifications</string>
+    <string name="about">About</string>
 </resources>
